# samp-plugin-crashdetect

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  GNUMakefile  LICENSE.txt  Makefile  README.md  README.txt  VERSION.txt  appveyor.yml  bitbucket-pipelines.yml  configreader.cpp  configreader_tests.cpp  index.html  pawn.json  version.h.sh
.github/workflows/: build.yml
amx/: CMakeLists.txt  LICENSE.txt  README.txt  amx.c  amx.h  amx.patch  amxaux.c  amxaux.h  amxaux.patch  amxdbg.c  amxdbg.h  amxdbg.patch  compile-fixes.patch  dbg-info.patch  mingw.patch  osdefs.h  rte-reporting.patch
cmake/: AddSAMPPluginTest.cmake  AddSAMPPluginTestPR.cmake  CrossCompiling.txt  FindPawnCC.cmake  FindPawnCompiler.cmake  FindPluginRunner.cmake  FindSAMPServer.cmake  FindSAMPServerCLI.cmake  GlobalBuildConfig.cmake  Plugin.cmake  PluginTest.cmake  Toolchain-mingw32.cmake
cmake/Modules/: AMXDefines.cmake  AmxConfig.cmake  PluginTest.cmake  RequireC++11.cmake  SampPlugin.cmake  SampPluginTest.cmake
include/: CMakeLists.txt  crashdetect.inc
lib/: logprintf.cpp  logprintf.h
lib/amx/: amx.c  amx.h  amxaux.c  amxaux.h  amxdbg.h
plugin/: CMakeLists.txt  amxcallstack.cpp  amxcallstack.h  amxdebuginfo.cpp  amxdebuginfo.h  amxopcode.cpp  amxopcode.h  amxpathfinder.cpp  amxpathfinder.h  amxscript.cpp  amxscript.h  amxservice.h  amxstacktrace.cpp  amxstacktrace.h  compiler-gcc.cpp  compiler-msvc.cpp  compiler.h  configreader.cpp  configreader.h  crashdetect.cpp  crashdetect.h  crashdetect.inc  cstdint.h  fileutils-unix.cpp  fileutils-win32.cpp  fileutils.cpp  fileutils.h  hook-unix.cpp  hook-win32.cpp  hook.cpp  hook.h  logprintf.cpp  logprintf.h  natives.cpp  npcall.cpp  npcall.h  os-unix.cpp  os-unix.h  os-win32.cpp  os-win32.h  (+16 more)
plugin/amx/: amx.c  amxaux.h  amxdbg.c  amxdbg.h
scripts/: crashinfo_ida.py
src/: .gitignore  CMakeLists.txt  amx.h  amxcallstack.cpp  amxcallstack.h  amxdebuginfo.cpp  amxdebuginfo.h  amxerror.cpp  amxerror.h  amxhandler.h  amxname.cpp  amxname.h  amxopcode.cpp  amxopcode.h  amxpathfinder.cpp  amxpathfinder.h  amxref.cpp  amxref.h  amxscript.cpp  amxscript.h  amxservice.h  amxstacktrace.cpp  amxstacktrace.h  amxutils.cpp  amxutils.h  compiler-gcc.cpp  compiler-msvc.cpp  compiler.h  configreader.cpp  configreader.h  crash.cpp  crash.h  crashdetect.cpp  crashdetect.h  crashdetect.rc  crashdetecthandler.cpp  crashdetecthandler.h  ctrl-c.cpp  ctrl-c.h  fileutils-unix.cpp  (+57 more)
src/amx/: CMakeLists.txt  README.txt  amx.c  amx.h  amxaux.c  amxdbg.c  amxdbg.h
test/: CMakeLists.txt  args.amx  args.pwn  bad_frame.amx  bad_frame.pwn  bounds.amx  bounds.out  bounds.pwn  invinstr.amx  not_found.out  notfound.amx  notfound.out  notfound.pwn  stacklow.amx  stacklow.out  stacklow.pwn
tests/: .gitignore  CMakeLists.txt  address_naught.pwn  args.out  args.pwn  bad_frame.out  bad_frame.pwn  bounds.pwn  compile-test  crash.amx  crash.pwn  full_output.txt.in  invinstr.pwn  long_call_error.pwn  long_call_ok.pwn  orte_backtrace.pwn  orte_regs.pwn  presence.pwn  ref_args.pwn  stacklow.pwn  states.pwn  test.inc  test.list  test.out.in  tests.list
tests/bug/empty_stack/: output.txt  test.amx  test.pwn
tests/bugs/orte_backtrace/: output.txt  pawn.cfg  test.amx  test.pwn
tests/error/bounds/: full_output.txt  output.txt  test.amx  test.pwn
tests/error/invinstr/: test.amx  test.pwn
tests/error/notfound/: full_output.txt  output.txt  test.amx
tests/error/stacklow/: full_output.txt  output.txt  test.amx
tests/errors/bounds/: output.txt  test.pwn
tests/errors/invinstr/: test.amx
tests/errors/notfound/: test.amx
tests/errors/stacklow/: output.txt  test.amx  test.pwn
tests/include/: test.inc
tests/misc/args/: full_output.txt  output.txt  test.amx  test.pwn
tests/misc/bad_frame/: full_output.txt  output.txt  test.amx  test.pwn
tests/misc/crash/: full_output.txt  test.amx
tests/misc/presence/: output.txt  test.amx  test.pwn
tests/misc/ref_args/: output.txt  test.amx  test.pwn
tests/misc/states/: output.txt  test.amx  test.pwn
tools/: 64k.py  crashinfo.py  crashinfo_ida.py  wrap_natives.py
